Fix debian install commands
Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/debian/main.yml
+++ b/tasks/install-deps/debian/main.yml
@@ -16,5 +16,15 @@
     state: present
   tags: install
 
+- name: Install vagrant and vagrant-libvirt
+  become: yes
+  become_method: sudo
+  apt:
+    name:
+      - vagrant
+      - ruby-libvirt
+    state: build-dep
+  tags: install
+
 - name: Installs the vagrant-libvirt build dependencies in case of manual update
-  command: "apt-get build-dep vagrant ruby-libvirt"
+  command: "vagrant plugin install vagrant-libvirt"
