Fix lint E301 complaint
Fixes the complaint: Commands should not change things if nothing needs doing

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -21,3 +21,5 @@
 
 - name: Installs the libvirt vagrant plugin
   command: "vagrant plugin install vagrant-libvirt"
+  register: configure_done
+  changed_when: "configure_done.rc == 0"
