--- a/tasks/install-deps/redhat/main.yml
+++ b/tasks/install-deps/redhat/main.yml
@@ -21,3 +21,5 @@
 
 - name: Installs the libvirt vagrant plugin
   command: "vagrant plugin install vagrant-libvirt"
+  register: cmd_done
+  changed_when: "cmd_done.rc == 0"
