tasks: remove not used task
Remove dubious task.

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,4 @@
 ---
 # Distro specific
-- name: Install libvirt and other dependencies
+- name: Install vagrant and other dependencies
   include_tasks: install-deps/main.yml
-
-- name: Enables user to run libvirt guests
-  include_tasks: enable-user/main.yml
