--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -21,5 +21,5 @@
 
 - name: Installs the libvirt vagrant plugin
   command: "vagrant plugin install vagrant-libvirt"
-  register: configure_done
-  changed_when: "configure_done.rc == 0"
+  register: cmd_done
+  changed_when: "cmd_done.rc == 0"
