suse/redhat: replace package installation for direct zip files installation
In practice I'm observing packages for vagrant don't work as great
as I'd hope. As such just always look for the latest and let the
user also specify the version they want.

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -1,11 +1,20 @@
 ---
-- name: Install vagrant
+- name: Verify vagrant installation
+  command: "which vagrant"
+  register: vagrant_present
+  changed_when: vagrant_present.rc == 1
+  failed_when: vagrant_present.rc != 0 and vagrant_present.rc != 1
+  tags: [ 'vagrant', 'verify' ]
+
+- name: Downlaod vagrant from the latest release and install locally
   become: yes
   become_method: sudo
-  zypper:
-    name:
-      - vagrant
-    state: present
+  unarchive:
+    src: https://releases.hashicorp.com/vagrant/{{ vagrant_version }}/vagrant_{{ vagrant_version }}_linux_amd64.zip
+    dest: /usr/local/bin
+    remote_src: yes
+  when:
+    - force_install_if_present|bool or vagrant_present.rc != 0
 
 # This is a major heck, alas, vagrant plugin subset commands do not have any
 # easy way to confirm if a plugin is installed in a straight forward way.
