--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,6 @@
 # SPDX-License-Identifier GPL-2.0+
 ---
-# Nothing
+
+# You can override these
+vagrant_version: "2.2.6"
+force_install_if_present: False
