Fix the name of a suse build dep package
Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -44,7 +44,7 @@
       - libvirt-devel
       - ruby-devel
       - gcc
-      - kvm-qemu
+      - qemu-kvm
     state: present
   when:
     - plugin_check.rc != 0
