debian: allow to force install from zip files / rebuild plugin
Using the distro packages is fine, however sometimes you may just
want to get the latest yourself.

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,4 +3,9 @@
 
 # You can override these
 vagrant_version: "2.2.6"
+
+# Ignores using distro packages and installs from zip file instead
+force_install_zip: False
+
+# Forces to install even if it is already present
 force_install_if_present: False
