tasks: run obs repo additions as root
Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -7,6 +7,8 @@
   tags: [ 'vagrant', 'verify' ]
 
 - name: "add the following development projects: Virtualization:vagrant"
+  become: yes
+  become_method: sudo
   include_tasks: ./add_obs_repo.yml
   vars:
     obs_project_name: "{{ item.name }}"
