--- a/tasks/install-deps/suse/add_obs_repo.yml
+++ b/tasks/install-deps/suse/add_obs_repo.yml
@@ -73,6 +73,17 @@
   set_fact:
     obs_project_repo_base: "{{ obs_url | replace('build', 'download') }}repositories/{{ obs_project_name | replace(':', ':/') }}/"
 
+- block:
+    - name: Forced SLE custom distro end name to a temporary name from config file
+      set_fact:
+        repo_distro_end: "{{ item.repo_distro_end }}"
+      when:
+        - 'is_sle | bool'
+        - "{{ ansible_distribution_version }} == {{ item.ansible_distribution_version }}"
+  with_items:
+    - "{{ sle_distro_end_map }}"
+  when: sle_custom_repo_distro_end | bool
+
 - name: try to fetch the obs project .repo file
   become: yes
   become_method: sudo
