--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: Import optional distribution specific variables
+  include_vars: "{{ item }}"
+  ignore_errors: yes
+  with_first_found:
+    - files:
+      - "{{ ansible_facts['os_family']|lower }}.yml"
+  tags: vars
+
 - name: Verify vagrant installation
   command: "which vagrant"
   register: vagrant_present
