tasks: move distros specific import to main.yml
Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/main.yml
+++ b/tasks/install-deps/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: Import optional distribution specific variables
+  include_vars: "{{ item }}"
+  ignore_errors: yes
+  with_first_found:
+    - files:
+      - "{{ ansible_facts['os_family']|lower }}.yml"
+  tags: vars
+
 - name: distribution specific setup
   import_tasks: debian/main.yml
   when: ansible_facts['os_family']|lower == 'debian'
