--- a/tasks/install-deps/suse/add_obs_repo.yml
+++ b/tasks/install-deps/suse/add_obs_repo.yml
@@ -4,13 +4,10 @@
     msg: Fail when the OBS project name is not set
   when: obs_project_name is not defined
 
-- name: Set SUSE specific distro facts
+- name: Set SUSE repo specific distro facts
   set_fact:
     obs_url: "https://build.opensuse.org/"
     obs_project_no_collon: "{{ obs_project_name | lower | replace(':', '_') }}"
-    is_sle: '{{ (ansible_distribution == "SLES") or (ansible_distribution == "SLED") }}'
-    is_leap: '{{ "Leap" in ansible_distribution }}'
-    is_tumbleweed: '{{ "openSUSE Tumbleweed" == ansible_distribution }}'
 
 - name: Set OBS pubkey file location
   set_fact:
