--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: Set generic SUSE specific distro facts
+  set_fact:
+    is_sle: '{{ (ansible_distribution == "SLES") or (ansible_distribution == "SLED") }}'
+    is_leap: '{{ "Leap" in ansible_distribution }}'
+    is_tumbleweed: '{{ "openSUSE Tumbleweed" == ansible_distribution }}'
+
 - name: Verify vagrant installation
   command: "which vagrant"
   register: vagrant_present
